feat: relatório de vendas e transações
